--- a/client/src/components/profile.css
+++ b/client/src/components/profile.css
@@ -17,61 +17,86 @@
   width: 100%;
   grid-column-start: 2;
   grid-column-end: 6;
-  border-radius:10px;
-  display:flex;
-  padding:30px 30px;
-  gap:40px
-
+  border-radius: 10px;
+  display: flex;
+  padding: 30px 30px;
+  gap: 40px;
 }
-.paragraph_div{
-    padding-top:40px ;
-    width: 100%;
+.paragraph_div {
+  padding-top: 40px;
+  width: 100%;
 }
 .photosize {
   width: 100%;
   max-height: 600px;
-  border-radius:10px;
+  border-radius: 10px;
   grid-column-start: 1;
   grid-column-end: 7;
 }
-.user_info{
-    display:flex;
-    gap:5px;
+.user_info {
+  display: flex;
+  gap: 5px;
 }
-.profle_tof{
-    width:100%;
-   
+.profle_tof {
+  width: 100%;
 }
-.photo_user{
-    width:100px;
-    height: 100px;
-    z-index: 1;
-    border:white solid 1px;
-    border-radius:5px;
+.photo_user {
+  width: 100px;
+  height: 100px;
+  z-index: 1;
+  border: white solid 1px;
+  border-radius: 5px;
 }
 
 .Bookmark_container {
-    display: grid;
-  
-    grid-template-areas:
-      "filter_container post_container post_container"
-      "filter_container post_container post_container";
+  display: grid;
 
-    gap: 40px;
-    padding: 5% 0% 10% 15%;
-  }
+  grid-template-areas:
+    "filter_container post_container post_container"
+    "filter_container post_container post_container";
+
+  gap: 40px;
+  padding: 5% 0% 10% 15%;
+}
 .filter_container {
-    grid-area: filter_container;
-    height: 200px;
-    border-radius: 10px;
-    padding-top: 20px;
-    justify-content: center;
-  }
-  .post_profile_container {
-    grid-area: post_container;
-    border-radius: 10px;
-    padding: 30px 30px;
-    max-width: 650px;
-    height:auto;
-  
-  }
+  grid-area: filter_container;
+  height: 200px;
+  border-radius: 10px;
+  padding-top: 20px;
+  justify-content: center;
+}
+.post_profile_container {
+  grid-area: post_container;
+  border-radius: 10px;
+  padding: 30px 30px;
+  max-width: 650px;
+  height: auto;
+}
+.follow_button {
+  margin-left: auto;
+  order: 2;
+  font-size: 13px;
+  background-color: #1e90ff;
+  border-radius: 5px;
+  padding: 0;
+  width: 80px;
+  height: 25px;
+  border: none;
+
+  color: white;
+}
+.user_info {
+  display: flex;
+  gap: 10px;
+  align-self: center;
+  justify-content: center
+}
+.name_info {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 600;
+}
+.follow_numbers {
+  font-size: 12px;
+  color: grey;
+}
