--- a/client/src/components/explore.css
+++ b/client/src/components/explore.css
@@ -28,9 +28,12 @@
 .post_container {
   grid-area: post_container;
   border-radius: 10px;
-  padding: 30px 30px;
+   display:grid;
   max-width: 650px;
-  height:auto;
+  background: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
+
+  height:100%;
+  gap:40px
 
 }
 /* filter */
