--- a/client/src/components/auth/edit.css
+++ b/client/src/components/auth/edit.css
@@ -1,6 +1,9 @@
 .back_btn {
     margin-bottom: 5px;
     color: rgb(0, 132, 255);
+    text-decoration: none;
+    border:none;
+    background:none
   }
   .arrow {
     border: solid rgb(0, 132, 255);
@@ -37,7 +40,7 @@
   .div_inputs {
     border: 1px solid grey;
     width: 700px;
-    height: 850px;
+    height: 870px;
     margin: 0;
     border-radius: 10px;
   }
