--- a/client/src/components/auth/edit.css
+++ b/client/src/components/auth/edit.css
@@ -70,8 +70,8 @@
     display: grid;
     justify-content: center;
     align-items: center;
-    min-width: 500px;
-    max-height: 600px;
+    width: 500px;
+    max-height:auto;
     font-family: "Poppins", sans-serif;
   }
   .photo_div {
